added a diferent drawer type, much cooler

--- a/react/.eslintrc.json
+++ b/react/.eslintrc.json
@@ -28,7 +28,7 @@
             "custom": "ignore",
             "explicitSpread": "enforce",
             "exceptions": ["Component"]
-        }]
-
+        }],
+        "react/destructuring-assignment": 0
     }
 }
